# transformer

./: README.md  get_data.sh  pyproject.toml
transformer/classic/: attention.py  encoder.py  feedforward.py
transformer/jax/: multiply.py
transformer/torch/: model.py
