[tool.poetry]
name = "transformer"
version = "0.1.0"
description = ""
authors = ["Wian Stipp <stippwian@gmail.com>", "Arthur Böök <atte.book@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
jax = "^0.3.1"
numpy = "^1.22.3"
scipy = "^1.8.0"
jaxlib = "^0.3.0"
flax = "^0.4.0"
optax = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
